# readfeed

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
readfeed/: _main.py  cli.py  data.py
readfeed/templates/: feed.xml
templates/: bookmarklet.js  feed.xml  index.html
